1.51	11/28/98
	1. Comparison between objects now is more sensible:
	"eq" performs a string comparison on object names
	"==" performs an object comparison.  Two objects are
	identical iff their names, classes and databases are identical
	2. Fixed bugs involving names containing "*" and "?" characters.
	3. Added the -long option to grep.
1.50    10/28.98
	1. THE SEMANTICS OF AUTOGENERATED FUNCTIONS HAS CHANGED.  THEY NOW
	ALWAYS DEREFERENCE THE TAG AND FETCH AN OBJECT FROM THE DATABASE.
	2. Added the Ace::put() function to the Ace object, allowing you to move
	objects from one database to another.
	3. Added Ace::Object::add_row() and add_tree() functions, making it easier to build
	up objects from scratch, or to mix and match objects from different databases.
        4. Added Ace::parse() and parse_file() methods, for creating objects from .ace files.
	5. Removed nulls from error strings.
    
1.47-49	Internal releases
    
1.46	1. Fixed nasty bug in which newlines appeared as "n" in text
        fields.
    
1.45.   1. Fixed problems with autogeneration
	2. Added the format() routine 3. Added the model() methods and
 	Ace::Model class
    
1.44	1. Added the auto_save() routine to the API
	2. Fixed problem of hanging tace processes after quitting local sessions
	3. Fixed problem with creation of new objects in local
        sessions.
    
1.43	1. Moved the unescape routine into the C level for performance reasons.
	2. Should now escape \? correctly and handle most protection issues.

1.42	1. Numerous small bug fixes

1.41	1. Fixed problem with truncation of trees at zero values
	2. Fixed implementation of updating wrt new aceservers

1.46    1. Fixed nasty replacement of newlines by "n" characters in text fields.

1.45    Internal release only.

1.44	1. Added the auto_save() routine to the API
	2. Fixed problem of hanging tace processes after quitting local sessions
	3. Fixed problem with creation of new objects in local sessions.
