@@ -5,6 +5,8 @@
 	identical iff their names, classes and databases are identical
 	2. Fixed bugs involving names containing "*" and "?" characters.
 	3. Added the -long option to grep.
+	4. Added the -display option to asGIF()
+	5. The follow() method now follows a tag into the database.
 1.50    10/28.98
 	1. THE SEMANTICS OF AUTOGENERATED FUNCTIONS HAS CHANGED.  THEY NOW
 	ALWAYS DEREFERENCE THE TAG AND FETCH AN OBJECT FROM THE DATABASE.
